Bug 391177: XSLT should reuse the existing inner window in order to help debuggers and the like. r=jst a=blocker CLOSED TREE